lib/dns/zonefile/parser.rb
require 'treetop'

module DNS
  module Zonefile
    # Autogenerated from a Treetop grammar. Edits may be lost.


    module ZonefileGrammar # :nodoc:
      include Treetop::Runtime

      def root
        @root ||= :zone
      end

      module Zone0
        def soa
          elements[1]
        end

      end

      module Zone1
        def origin
          soa.origin.host.to_s
        end

        def to_s
          text_value
        end

        def rr
          elements[-1].elements.select { |e| e.to_s !~ /\A\s*([;$].*)?\z|\A\z/; }
        end

        def entries
          elements[0].elements.select { |e| e.to_s !~ /\A\s*(;.*)?\z|\A\z/; } +
            [soa] +
            elements[-1].elements.select { |e| e.to_s !~ /\A\s*(;.*)?\z|\A\z/; }
        end
      end

      def _nt_zone
        start_index = index
        if node_cache[:zone].has_key?(index)
          cached = node_cache[:zone][index]
          if cached
            cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0, s0 = index, []
        s1, i1 = [], index
        loop do
          i2 = index
          r3 = _nt_variable
          if r3
            r2 = r3
          else
            r4 = _nt_space_or_break
            if r4
              r2 = r4
            else
              r5 = _nt_comment
              if r5
                r2 = r5
              else
                @index = i2
                r2 = nil
              end
            end
          end
          if r2
            s1 << r2
          else
            break
          end
        end
        r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
        s0 << r1
        if r1
          r6 = _nt_soa
          s0 << r6
          if r6
            s7, i7 = [], index
            loop do
              i8 = index
              r9 = _nt_resource_record
              if r9
                r8 = r9
              else
                r10 = _nt_variable
                if r10
                  r8 = r10
                else
                  r11 = _nt_comment
                  if r11
                    r8 = r11
                  else
                    r12 = _nt_space
                    if r12
                      r8 = r12
                    else
                      r13 = _nt_linebreak
                      if r13
                        r8 = r13
                      else
                        @index = i8
                        r8 = nil
                      end
                    end
                  end
                end
              end
              if r8
                s7 << r8
              else
                break
              end
            end
            r7 = instantiate_node(SyntaxNode,input, i7...index, s7)
            s0 << r7
          end
        end
        if s0.last
          r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
          r0.extend(Zone0)
          r0.extend(Zone1)
        else
          @index = i0
          r0 = nil
        end

        node_cache[:zone][start_index] = r0

        r0
      end

      module Variable0
        def name
          elements[1]
        end

        def space
          elements[2]
        end

        def value
          elements[3]
        end

      end

      module Variable1
        def to_s
          "$#{name.text_value.to_s} #{value.text_value.to_s}"
        end

        def parse_type ; :variable ; end
      end

      def _nt_variable
        start_index = index
        if node_cache[:variable].has_key?(index)
          cached = node_cache[:variable][index]
          if cached
            cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0, s0 = index, []
        if has_terminal?("$", false, index)
          r1 = instantiate_node(SyntaxNode,input, index...(index + 1))
          @index += 1
        else
          terminal_parse_failure("$")
          r1 = nil
        end
        s0 << r1
        if r1
          s2, i2 = [], index
          loop do
            if has_terminal?('\G[a-zA-Z0-9]', true, index)
              r3 = true
              @index += 1
            else
              r3 = nil
            end
            if r3
              s2 << r3
            else
              break
            end
          end
          if s2.empty?
            @index = i2
            r2 = nil
          else
            r2 = instantiate_node(SyntaxNode,input, i2...index, s2)
          end
          s0 << r2
          if r2
            r4 = _nt_space
            s0 << r4
            if r4
              s5, i5 = [], index
              loop do
                if has_terminal?('\G[a-zA-Z0-9\\.\\-_]', true, index)
                  r6 = true
                  @index += 1
                else
                  r6 = nil
                end
                if r6
                  s5 << r6
                else
                  break
                end
              end
              if s5.empty?
                @index = i5
                r5 = nil
              else
                r5 = instantiate_node(SyntaxNode,input, i5...index, s5)
              end
              s0 << r5
              if r5
                r8 = _nt_space
                if r8
                  r7 = r8
                else
                  r7 = instantiate_node(SyntaxNode,input, index...index)
                end
                s0 << r7
                if r7
                  r10 = _nt_comment
                  if r10
                    r9 = r10
                  else
                    r9 = instantiate_node(SyntaxNode,input, index...index)
                  end
                  s0 << r9
                end
              end
            end
          end
        end
        if s0.last
          r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
          r0.extend(Variable0)
          r0.extend(Variable1)
        else
          @index = i0
          r0 = nil
        end

        node_cache[:variable][start_index] = r0

        r0
      end

      module Soa0
        def origin
          elements[0]
        end

        def space1
          elements[1]
        end

        def ttl_and_klass
          elements[2]
        end

        def space2
          elements[4]
        end

        def ns
          elements[5]
        end

        def space3
          elements[6]
        end

        def rp
          elements[7]
        end

        def space4
          elements[8]
        end

        def serial
          elements[11]
        end

        def space_or_break1
          elements[12]
        end

        def refresh
          elements[13]
        end

        def space_or_break2
          elements[14]
        end

        def reretry
          elements[15]
        end

        def space_or_break3
          elements[16]
        end

        def expiry
          elements[17]
        end

        def space_or_break4
          elements[18]
        end

        def nxttl
          elements[19]
        end

      end

      module Soa1
        def to_s
          "#{origin} #{ttl} #{klass} SOA #{ns} #{rp} (#{serial} #{refresh} #{reretry} #{expiry} #{nxttl})"
        end

        def parse_type ; :soa ; end
        def ttl; ttl_and_klass.ttl; end
        def klass; ttl_and_klass.klass; end
      end

      def _nt_soa
        start_index = index
        if node_cache[:soa].has_key?(index)
          cached = node_cache[:soa][index]
          if cached
            cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0, s0 = index, []
        r1 = _nt_origin
        s0 << r1
        if r1
          r2 = _nt_space
          s0 << r2
          if r2
            r3 = _nt_ttl_and_klass
            s0 << r3
            if r3
              if has_terminal?("SOA", false, index)
                r4 = instantiate_node(SyntaxNode,input, index...(index + 3))
                @index += 3
              else
                terminal_parse_failure("SOA")
                r4 = nil
              end
              s0 << r4
              if r4
                r5 = _nt_space
                s0 << r5
                if r5
                  r6 = _nt_ns
                  s0 << r6
                  if r6
                    r7 = _nt_space
                    s0 << r7
                    if r7
                      r8 = _nt_rp
                      s0 << r8
                      if r8
                        r9 = _nt_space
                        s0 << r9
                        if r9
                          if has_terminal?("(", false, index)
                            r11 = instantiate_node(SyntaxNode,input, index...(index + 1))
                            @index += 1
                          else
                            terminal_parse_failure("(")
                            r11 = nil
                          end
                          if r11
                            r10 = r11
                          else
                            r10 = instantiate_node(SyntaxNode,input, index...index)
                          end
                          s0 << r10
                          if r10
                            s12, i12 = [], index
                            loop do
                              r13 = _nt_space_or_break
                              if r13
                                s12 << r13
                              else
                                break
                              end
                            end
                            r12 = instantiate_node(SyntaxNode,input, i12...index, s12)
                            s0 << r12
                            if r12
                              r14 = _nt_serial
                              s0 << r14
                              if r14
                                r15 = _nt_space_or_break
                                s0 << r15
                                if r15
                                  r16 = _nt_refresh
                                  s0 << r16
                                  if r16
                                    r17 = _nt_space_or_break
                                    s0 << r17
                                    if r17
                                      r18 = _nt_reretry
                                      s0 << r18
                                      if r18
                                        r19 = _nt_space_or_break
                                        s0 << r19
                                        if r19
                                          r20 = _nt_expiry
                                          s0 << r20
                                          if r20
                                            r21 = _nt_space_or_break
                                            s0 << r21
                                            if r21
                                              r22 = _nt_nxttl
                                              s0 << r22
                                              if r22
                                                s23, i23 = [], index
                                                loop do
                                                  r24 = _nt_space_or_break
                                                  if r24
                                                    s23 << r24
                                                  else
                                                    break
                                                  end
                                                end
                                                r23 = instantiate_node(SyntaxNode,input, i23...index, s23)
                                                s0 << r23
                                                if r23
                                                  if has_terminal?(")", false, index)
                                                    r26 = instantiate_node(SyntaxNode,input, index...(index + 1))
                                                    @index += 1
                                                  else
                                                    terminal_parse_failure(")")
                                                    r26 = nil
                                                  end
                                                  if r26
                                                    r25 = r26
                                                  else
                                                    r25 = instantiate_node(SyntaxNode,input, index...index)
                                                  end
                                                  s0 << r25
                                                end
                                              end
                                            end
                                          end
                                        end
                                      end
                                    end
                                  end
                                end
                              end
                            end
                          end
                        end
                      end
                    end
                  end
                end
              end
            end
          end
        end
        if s0.last
          r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
          r0.extend(Soa0)
          r0.extend(Soa1)
        else
          @index = i0
          r0 = nil
        end

        node_cache[:soa][start_index] = r0

        r0
      end

      module ResourceRecord0
        def comment
          elements[1]
        end
      end

      module ResourceRecord1
        def record
          elements[0]
        end

        def linebreak
          elements[2]
        end
      end

      module ResourceRecord2
        def zone
          p = parent
          while p.respond_to?(:parent) && p.parent
            p = p.parent
          end
          p
        end

        def to_s
          if respond_to?(:comment)
            "#{record} #{comment}"
          else
            record.to_s
          end
        end

        def record_type
          record.type.text_value.to_s
        end

        def ttl
          record.ttl_and_klass.ttl
        end

        def klass
          record.ttl_and_klass.klass
        end

        def method_missing(method_name, *args)
          if record.respond_to?(method_name)
            record.send(method_name, *args)
          end
        end

        def respond_to?(method_name)
          super || record.respond_to?(method_name)
        end

        def parse_type ; :record ; end
      end

      def _nt_resource_record
        start_index = index
        if node_cache[:resource_record].has_key?(index)
          cached = node_cache[:resource_record][index]
          if cached
            cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0, s0 = index, []
        i1 = index
        r2 = _nt_a_record
        if r2
          r1 = r2
        else
          r3 = _nt_aaaa_record
          if r3
            r1 = r3
          else
            r4 = _nt_cname_record
            if r4
              r1 = r4
            else
              r5 = _nt_mx_record
              if r5
                r1 = r5
              else
                r6 = _nt_naptr_record
                if r6
                  r1 = r6
                else
                  r7 = _nt_ns_record
                  if r7
                    r1 = r7
                  else
                    r8 = _nt_ptr_record
                    if r8
                      r1 = r8
                    else
                      r9 = _nt_srv_record
                      if r9
                        r1 = r9
                      else
                        r10 = _nt_spf_record
                        if r10
                          r1 = r10
                        else
                          r11 = _nt_txt_record
                          if r11
                            r1 = r11
                          else
                            r12 = _nt_soa_record
                            if r12
                              r1 = r12
                            else
                              r13 = _nt_x_mail_fwd_record
                              if r13
                                r1 = r13
                              else
                                r14 = _nt_x_web_fwd_record
                                if r14
                                  r1 = r14
                                else
                                  @index = i1
                                  r1 = nil
                                end
                              end
                            end
                          end
                        end
                      end
                    end
                  end
                end
              end
            end
          end
        end
        s0 << r1
        if r1
          i16, s16 = index, []
          r18 = _nt_space
          if r18
            r17 = r18
          else
            r17 = instantiate_node(SyntaxNode,input, index...index)
          end
          s16 << r17
          if r17
            r19 = _nt_comment
            s16 << r19
          end
          if s16.last
            r16 = instantiate_node(SyntaxNode,input, i16...index, s16)
            r16.extend(ResourceRecord0)
          else
            @index = i16
            r16 = nil
          end
          if r16
            r15 = r16
          else
            r15 = instantiate_node(SyntaxNode,input, index...index)
          end
          s0 << r15
          if r15
            r20 = _nt_linebreak
            s0 << r20
          end
        end
        if s0.last
          r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
          r0.extend(ResourceRecord1)
          r0.extend(ResourceRecord2)
        else
          @index = i0
          r0 = nil
        end

        node_cache[:resource_record][start_index] = r0

        r0
      end

      module ARecord0
        def host
          elements[0]
        end

        def space1
          elements[1]
        end

        def ttl_and_klass
          elements[2]
        end

        def type
          elements[3]
        end

        def space2
          elements[4]
        end

        def ip_address
          elements[5]
        end
      end

      module ARecord1
        def to_s
          "#{host} #{ttl_and_klass} A #{ip_address}"
        end
      end

      def _nt_a_record
        start_index = index
        if node_cache[:a_record].has_key?(index)
          cached = node_cache[:a_record][index]
          if cached
            cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0, s0 = index, []
        r1 = _nt_host
        s0 << r1
        if r1
          r2 = _nt_space
          s0 << r2
          if r2
            r3 = _nt_ttl_and_klass
            s0 << r3
            if r3
              if has_terminal?("A", false, index)
                r4 = instantiate_node(SyntaxNode,input, index...(index + 1))
                @index += 1
              else
                terminal_parse_failure("A")
                r4 = nil
              end
              s0 << r4
              if r4
                r5 = _nt_space
                s0 << r5
                if r5
                  r6 = _nt_ip_address
                  s0 << r6
                end
              end
            end
          end
        end
        if s0.last
          r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
          r0.extend(ARecord0)
          r0.extend(ARecord1)
        else
          @index = i0
          r0 = nil
        end

        node_cache[:a_record][start_index] = r0

        r0
      end

      module IpAddress0
      end

      module IpAddress1
        def to_s
          text_value
        end
      end

      def _nt_ip_address
        start_index = index
        if node_cache[:ip_address].has_key?(index)
          cached = node_cache[:ip_address][index]
          if cached
            cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0, s0 = index, []
        s1, i1 = [], index
        loop do
          if has_terminal?('\G[\\d]', true, index)
            r2 = true
            @index += 1
          else
            r2 = nil
          end
          if r2
            s1 << r2
          else
            break
          end
        end
        if s1.empty?
          @index = i1
          r1 = nil
        else
          r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
        end
        s0 << r1
        if r1
          if has_terminal?(".", false, index)
            r3 = instantiate_node(SyntaxNode,input, index...(index + 1))
            @index += 1
          else
            terminal_parse_failure(".")
            r3 = nil
          end
          s0 << r3
          if r3
            s4, i4 = [], index
            loop do
              if has_terminal?('\G[\\d]', true, index)
                r5 = true
                @index += 1
              else
                r5 = nil
              end
              if r5
                s4 << r5
              else
                break
              end
            end
            if s4.empty?
              @index = i4
              r4 = nil
            else
              r4 = instantiate_node(SyntaxNode,input, i4...index, s4)
            end
            s0 << r4
            if r4
              if has_terminal?(".", false, index)
                r6 = instantiate_node(SyntaxNode,input, index...(index + 1))
                @index += 1
              else
                terminal_parse_failure(".")
                r6 = nil
              end
              s0 << r6
              if r6
                s7, i7 = [], index
                loop do
                  if has_terminal?('\G[\\d]', true, index)
                    r8 = true
                    @index += 1
                  else
                    r8 = nil
                  end
                  if r8
                    s7 << r8
                  else
                    break
                  end
                end
                if s7.empty?
                  @index = i7
                  r7 = nil
                else
                  r7 = instantiate_node(SyntaxNode,input, i7...index, s7)
                end
                s0 << r7
                if r7
                  if has_terminal?(".", false, index)
                    r9 = instantiate_node(SyntaxNode,input, index...(index + 1))
                    @index += 1
                  else
                    terminal_parse_failure(".")
                    r9 = nil
                  end
                  s0 << r9
                  if r9
                    s10, i10 = [], index
                    loop do
                      if has_terminal?('\G[\\d]', true, index)
                        r11 = true
                        @index += 1
                      else
                        r11 = nil
                      end
                      if r11
                        s10 << r11
                      else
                        break
                      end
                    end
                    if s10.empty?
                      @index = i10
                      r10 = nil
                    else
                      r10 = instantiate_node(SyntaxNode,input, i10...index, s10)
                    end
                    s0 << r10
                  end
                end
              end
            end
          end
        end
        if s0.last
          r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
          r0.extend(IpAddress0)
          r0.extend(IpAddress1)
        else
          @index = i0
          r0 = nil
        end

        node_cache[:ip_address][start_index] = r0

        r0
      end

      module AaaaRecord0
        def host
          elements[0]
        end

        def space1
          elements[1]
        end

        def ttl_and_klass
          elements[2]
        end

        def type
          elements[3]
        end

        def space2
          elements[4]
        end

        def ip_address
          elements[5]
        end
      end

      module AaaaRecord1
        def to_s
          "#{host} #{ttl_and_klass} AAAA #{ip_address}"
        end
      end

      def _nt_aaaa_record
        start_index = index
        if node_cache[:aaaa_record].has_key?(index)
          cached = node_cache[:aaaa_record][index]
          if cached
            cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0, s0 = index, []
        r1 = _nt_host
        s0 << r1
        if r1
          r2 = _nt_space
          s0 << r2
          if r2
            r3 = _nt_ttl_and_klass
            s0 << r3
            if r3
              if has_terminal?("AAAA", false, index)
                r4 = instantiate_node(SyntaxNode,input, index...(index + 4))
                @index += 4
              else
                terminal_parse_failure("AAAA")
                r4 = nil
              end
              s0 << r4
              if r4
                r5 = _nt_space
                s0 << r5
                if r5
                  r6 = _nt_ip6_address
                  s0 << r6
                end
              end
            end
          end
        end
        if s0.last
          r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
          r0.extend(AaaaRecord0)
          r0.extend(AaaaRecord1)
        else
          @index = i0
          r0 = nil
        end

        node_cache[:aaaa_record][start_index] = r0

        r0
      end

      module Ip6Address0
        def to_s
          text_value.downcase
        end
      end

      def _nt_ip6_address
        start_index = index
        if node_cache[:ip6_address].has_key?(index)
          cached = node_cache[:ip6_address][index]
          if cached
            cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        s0, i0 = [], index
        loop do
          if has_terminal?('\G[\\da-fA-F:.]', true, index)
            r1 = true
            @index += 1
          else
            r1 = nil
          end
          if r1
            s0 << r1
          else
            break
          end
          if s0.size == 39
            break
          end
        end
        if s0.size < 2
          @index = i0
          r0 = nil
        else
          r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
          r0.extend(Ip6Address0)
        end

        node_cache[:ip6_address][start_index] = r0

        r0
      end

      module CnameRecord0
        def host
          elements[0]
        end

        def space1
          elements[1]
        end

        def ttl_and_klass
          elements[2]
        end

        def type
          elements[3]
        end

        def space2
          elements[4]
        end

        def target
          elements[5]
        end
      end

      module CnameRecord1
        def to_s
          "#{host} #{ttl_and_klass} CNAME #{target}"
        end
      end

      def _nt_cname_record
        start_index = index
        if node_cache[:cname_record].has_key?(index)
          cached = node_cache[:cname_record][index]
          if cached
            cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0, s0 = index, []
        r1 = _nt_host
        s0 << r1
        if r1
          r2 = _nt_space
          s0 << r2
          if r2
            r3 = _nt_ttl_and_klass
            s0 << r3
            if r3
              if has_terminal?("CNAME", false, index)
                r4 = instantiate_node(SyntaxNode,input, index...(index + 5))
                @index += 5
              else
                terminal_parse_failure("CNAME")
                r4 = nil
              end
              s0 << r4
              if r4
                r5 = _nt_space
                s0 << r5
                if r5
                  r6 = _nt_host
                  s0 << r6
                end
              end
            end
          end
        end
        if s0.last
          r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
          r0.extend(CnameRecord0)
          r0.extend(CnameRecord1)
        else
          @index = i0
          r0 = nil
        end

        node_cache[:cname_record][start_index] = r0

        r0
      end

      module MxRecord0
        def host
          elements[0]
        end

        def space1
          elements[1]
        end

        def ttl_and_klass
          elements[2]
        end

        def type
          elements[3]
        end

        def space2
          elements[4]
        end

        def priority
          elements[5]
        end

        def space3
          elements[6]
        end

        def exchanger
          elements[7]
        end
      end

      module MxRecord1
        def to_s
          "#{host} #{ttl_and_klass} MX #{priority} #{exchanger}"
        end
      end

      def _nt_mx_record
        start_index = index
        if node_cache[:mx_record].has_key?(index)
          cached = node_cache[:mx_record][index]
          if cached
            cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0, s0 = index, []
        r1 = _nt_host
        s0 << r1
        if r1
          r2 = _nt_space
          s0 << r2
          if r2
            r3 = _nt_ttl_and_klass
            s0 << r3
            if r3
              if has_terminal?("MX", false, index)
                r4 = instantiate_node(SyntaxNode,input, index...(index + 2))
                @index += 2
              else
                terminal_parse_failure("MX")
                r4 = nil
              end
              s0 << r4
              if r4
                r5 = _nt_space
                s0 << r5
                if r5
                  r6 = _nt_integer
                  s0 << r6
                  if r6
                    r7 = _nt_space
                    s0 << r7
                    if r7
                      r8 = _nt_host
                      s0 << r8
                    end
                  end
                end
              end
            end
          end
        end
        if s0.last
          r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
          r0.extend(MxRecord0)
          r0.extend(MxRecord1)
        else
          @index = i0
          r0 = nil
        end

        node_cache[:mx_record][start_index] = r0

        r0
      end

      module NaptrRecord0
        def host
          elements[0]
        end

        def space1
          elements[1]
        end

        def ttl_and_klass
          elements[2]
        end

        def type
          elements[3]
        end

        def space2
          elements[4]
        end

        def data
          elements[5]
        end
      end

      module NaptrRecord1
        def to_s
          "#{host} #{ttl_and_klass} NAPTR #{data}"
        end
      end

      def _nt_naptr_record
        start_index = index
        if node_cache[:naptr_record].has_key?(index)
          cached = node_cache[:naptr_record][index]
          if cached
            cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end
